--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-{% load static %}
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-</head>
-<body>
-   
-    <h1>  my html </h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{%block main %}
+index fayli
+
+{% endblock main %}
