--- a/templates/about.html
+++ b/templates/about.html
@@ -1,12 +1,9 @@
 {% extends "base.html" %}
 
 {% block main %}
- about fayli
+{{sozum}}
 
 {% endblock main %}
 
 
-{% block part2 %}
-<br>
-aboutun part2si
-{% endblock part2 %}
+
