--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 
 {% block hello  %}{% endblock hello  %}
 
-{% block helloyeni %}{% endblock helloyeni %}
+{% block helloyenii %}{% endblock helloyenii %}
 
 </body>
 
