--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 
 {% block hello  %}{% endblock hello  %}
 
-{% block helloyenii %}{% endblock helloyenii %}
+{% block helloyenii1 %}{% endblock helloyenii1 %}
 
 </body>
 
