--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payna</title>
     <link rel="stylesheet" href="{% static './style.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+
 </head>
 
 <body>
@@ -15,11 +17,7 @@
 {% include "header.html" %}
 {% block main %}{% endblock main %}
 
-
-{% block hello  %}{% endblock hello  %}
-
-{% block helloyenii3 %}{% endblock helloyenii3 %}
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
  
 </html>
