--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,14 @@
 <body>
  
 {% include "header.html" %}
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <div {% if message.tags %} class=" alert alert-{{ message.tags }}"{% endif %}>{{ message }}</div>
+    {% endfor %}
+</ul>
+{% endif %}
+
 {% block main %}{% endblock main %}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
