--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-</head>
-<body>
-    
-    <h1>salam</h1>
-</body>
-</html>
+{% load static %}
+
+{% block main %}
+
+hello{% endblock main %}
