--- a/templates/header.html
+++ b/templates/header.html
@@ -10,7 +10,7 @@
         </ul>
         <div class="nav-buttons">
             <a href="#" class="sign-in"> <button>Sign In</button></a>
-            <a href="#" class="register"> <button>Register</button></a>
+            <a href="{% url 'register' %}" class="register"> <button>Register</button></a>
           </div>
     </nav>
 </header>
