--- a/templates/createarticle.html
+++ b/templates/createarticle.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block main %}
-<form method="post"  style="width:380px;margin:auto">
+<form method="post"  style="width:380px;margin:auto" enctype="multipart/form-data">
     {% csrf_token %}
  
     {{form|crispy}}
